--- a/settings.ini
+++ b/settings.ini
@@ -1,7 +1,8 @@
 ; This is a sample configuration file
 
-;Adding more than two calendars might cause undetermined results as two solemnities might occur on same day.
-;IMPORTANT: Do not place table name directly in here as it is readable by everyone and will be a huge security risk. Add a table prefix and set the prefix at getDataFromDB function in RomanCalendar.php
+; Adding more than two calendars might cause undetermined results as two solemnities might occur on same day.
+; IMPORTANT: Do not place table name directly in here as shown below. It is readable by everyone and will be a huge security risk. 
+; Add a table prefix and set the prefix at getDataFromDB function in RomanCalendar.php
 calendars[] = 'calendar'
 calendars[] = 'calendar__india'
 
